examples/test/testpolicy2916.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2916
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key30: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value45
      podSelector:
        matchLabels:
          key49: value22
          key34: value0
          key42: value38
